added gptj support now testing

--- a/examples/chat_demo.ipynb
+++ b/examples/chat_demo.ipynb
@@ -31,10 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "from accelerate import init_empty_weights, load_checkpoint_and_dispatch\n",
-    "from awq.quantize.quantizer import real_quantize_model_weight\n",
-    "from transformers import AutoModelForCausalLM, AutoTokenizer, AutoConfig\n",
+    "from awq.models.auto import AutoAWQForCausalLM\n",
+    "from transformers import AutoTokenizer\n",
     "from tinychat.demo import gen_params, stream_output\n",
     "from tinychat.stream_generators import StreamGenerator\n",
     "from tinychat.modules import make_quant_norm, make_quant_attn, make_fused_mlp\n",
@@ -45,37 +43,24 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Please get the Vicuna model from [FastChat](https://github.com/lm-sys/FastChat) and run the following command to generate a quantized model checkpoint first.\n",
-    "\n",
-    "```bash\n",
-    "mkdir quant_cache\n",
-    "python -m awq.entry --model_path [vicuna-7b_model_path] \\\n",
-    "    --w_bit 4 --q_group_size 128 \\\n",
-    "    --load_awq awq_cache/vicuna-7b-w4-g128.pt \\\n",
-    "    --q_backend real --dump_quant quant_cache/vicuna-7b-w4-g128-awq.pt\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Replacing layers...: 100%|██████████| 32/32 [00:02<00:00, 11.85it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "# model_path = \"\" # the path of vicuna-7b model\n",
-    "# load_quant_path = \"quant_cache/vicuna-7b-w4-g128-awq.pt\"\n",
-    "model_path = \"/data/llm/checkpoints/vicuna-hf/vicuna-7b\"\n",
-    "load_quant_path = \"/data/llm/checkpoints/vicuna-hf/vicuna-7b-awq-w4g128.pt\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We first load a empty model and replace all the linear layers with WQLinear layers. Then we load the quantized weights from the checkpoint. "
+    "model_path = 'vicuna-7b-v1.5-awq'\n",
+    "quant_file = 'awq_model_w4_g128.pt'\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_path, use_fast=False)\n",
+    "model = AutoAWQForCausalLM.from_quantized(model_path, quant_file)"
    ]
   },
   {
@@ -83,59 +68,6 @@
    "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b79a82b73ab4d9191ba54f5d0f8cb86",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "real weight quantization...(init only): 100%|███████████████████| 32/32 [00:11<00:00,  2.69it/s]\n",
-      "The model weights are not tied. Please use the `tie_weights` method before using the `infer_auto_device` function.\n",
-      "The model weights are not tied. Please use the `tie_weights` method before using the `infer_auto_device` function.\n"
-     ]
-    }
-   ],
-   "source": [
-    "config = AutoConfig.from_pretrained(model_path)\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_path, use_fast=False)\n",
-    "with init_empty_weights():\n",
-    "    model = AutoModelForCausalLM.from_pretrained(model_path, config=config,\n",
-    "                                                    torch_dtype=torch.float16)\n",
-    "q_config = {\"zero_point\": True, \"q_group_size\": 128}\n",
-    "real_quantize_model_weight(\n",
-    "    model, w_bit=4, q_config=q_config, init_only=True)\n",
-    "\n",
-    "model = load_checkpoint_and_dispatch(\n",
-    "    model, load_quant_path,\n",
-    "    device_map=\"auto\",\n",
-    "    no_split_module_classes=[\"LlamaDecoderLayer\"]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Warning] Calling a fake MLP fusion. But still faster than Huggingface Implimentation.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -162,69 +94,47 @@
        ")"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "make_quant_attn(model, \"cuda:0\")\n",
-    "make_quant_norm(model)\n",
-    "make_fused_mlp(model)"
+    "make_quant_attn(model.model, \"cuda:0\")\n",
+    "make_quant_norm(model.model)\n",
+    "make_fused_mlp(model.model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "USER:  Show me some attractions in Boston.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ASSISTANT: 1. Boston Public Library\n",
-      "2. Fenway Park\n",
-      "3. Harvard Square\n",
-      "4. Boston Common\n",
-      "5. Freedom Trail\n",
-      "6. Museum of Fine Arts\n",
-      "7. Isabella Stewart Gardner Museum\n",
-      "8. Paul Revere House\n",
-      "9. New England Aquarium\n",
-      "10. Museum of Science\n",
+      "ASSISTANT: Sure! Here are some popular tourist attractions in Boston:\n",
+      "\n",
+      "1. Freedom Trail - a 2.5-mile walking trail that takes you through some of the most important historical sites in Boston, including Paul Revere's House, the Old North Church, and the site of the Boston Massacre.\n",
+      "2. Fenway Park - home to the Boston Red Sox baseball team, this historic ballpark is one of the oldest in Major League Baseball.\n",
+      "3. Museum of Fine Arts - one of the largest art museums in the country, with a collection of over 450,000 works of art from around the world.\n",
+      "4. Boston Harbor Islands National Recreation Area - a group of islands located just offshore from downtown Boston that offer stunning views of the city skyline and easy access to outdoor recreational activities like hiking and kayaking.\n",
+      "5. New England Aquarium - one of the oldest and largest aquariums in the United States, featuring a wide variety of marine life, including giant whales and colorful fish.\n",
+      "6. The USS Constitution Museum - located on board the USS Constitution, a historic ship that played a key role in the War of 1812 and is still in active service today.\n",
+      "7. Bunker Hill Monument - a 221-foot-tall obelisk located in Charlestown that commemorates the Battle of Bunker Hill during the Revolutionary War.\n",
+      "8. The Hancock Building - a historic building in the heart of Boston that offers panoramic views of the city from its observation deck.\n",
       "==================================================\n",
       "Speed of Inference\n",
       "--------------------------------------------------\n",
-      "Context Stage    : 7.18 ms/token\n",
-      "Generation Stage : 9.49 ms/token\n",
-      "Average Speed    : 8.53 ms/token\n",
-      "==================================================\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "USER:  \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Generation Stage : 10.13 ms/token\n",
+      "==================================================\n",
       "EXIT...\n"
      ]
     }
    ],
    "source": [
-    "model_prompter = get_prompter(\"llama\", model_path)\n",
+    "model_prompter = get_prompter(model, model_path)\n",
     "stream_generator = StreamGenerator\n",
     "count = 0\n",
     "while True:\n",
@@ -239,20 +149,13 @@
     "    model_prompter.update_template(outputs)\n",
     "    count += 1"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (awq)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "awq"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -264,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
