--- a/examples/llava_demo.ipynb
+++ b/examples/llava_demo.ipynb
@@ -55,17 +55,25 @@
     "from llava.utils import disable_torch_init\n",
     "from llava.model import *\n",
     "from llava.model.utils import KeywordsStoppingCriteria\n",
-    "from awq.quantize.pre_quant import apply_awq\n",
-    "from awq.quantize.quantizer import real_quantize_model_weight\n",
+    "from awq.models.auto import AutoAWQForCausalLM\n",
     "import os\n",
     "import gc\n",
+    "\n",
+    "from awq.quantize.auto_clip import apply_clip\n",
+    "from awq.quantize.auto_scale import apply_scale\n",
     "\n",
     "# This demo only support single GPU for now\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"\n",
     "DEFAULT_IMAGE_TOKEN = \"<image>\"\n",
     "DEFAULT_IMAGE_PATCH_TOKEN = \"<im_patch>\"\n",
     "DEFAULT_IM_START_TOKEN = \"<im_start>\"\n",
-    "DEFAULT_IM_END_TOKEN = \"<im_end>\""
+    "DEFAULT_IM_END_TOKEN = \"<im_end>\"\n",
+    "\n",
+    "def load_search_result_into_memory(model, search_path):\n",
+    "    awq_results = torch.load(search_path, map_location=\"cpu\")\n",
+    "            \n",
+    "    apply_scale(model, awq_results[\"scale\"])\n",
+    "    apply_clip(model, awq_results[\"clip\"])"
    ]
   },
   {
@@ -91,20 +99,25 @@
     }
    ],
    "source": [
-    "model_path = \"/dataset/llava/LLaVA-13B-v0\"  # Please change here \n",
-    "quant_path = \"../quant_cache/LLaVA-13B-v0-w4-g128-awq.pt\"  # place to dump quant weights\n",
+    "model_path = \"liuhaotian/LLaVA-13b-delta-v0\"\n",
+    "quant_path = \"LLaVA-13B-v0-awq\" # place to dump quant weights\n",
+    "search_path = \"../awq_cache/llava-13b-v0-w4-g128.pt\" # place where you stored search results\n",
     "\n",
-    "model = LlavaLlamaForCausalLM.from_pretrained(model_path, low_cpu_mem_usage=True, torch_dtype=torch.float16, use_cache=True).cuda()\n",
+    "# Load model\n",
+    "model = AutoAWQForCausalLM.from_pretrained(model_path)\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_path, trust_remote_code=True)\n",
+    "quant_config = {\"zero_point\": True, \"q_group_size\": 128, \"w_bit\": 4}\n",
     "\n",
-    "awq_results = torch.load(\"../awq_cache/llava-13b-v0-w4-g128.pt\", map_location=\"cpu\")\n",
-    "apply_awq(model, awq_results)\n",
+    "# Load model and search results\n",
+    "load_search_result_into_memory(model.model, search_path)\n",
     "\n",
-    "real_quantize_model_weight(model, w_bit=4, q_config={\"zero_point\": True, \"q_group_size\": 128})\n",
-    "torch.save(model.cpu().state_dict(), quant_path)\n",
+    "# Run actual weight quantization\n",
+    "model.quantize(quant_config=quant_config, run_search=False, run_quant=True)\n",
     "\n",
-    "del model\n",
-    "gc.collect()\n",
-    "torch.cuda.empty_cache()"
+    "# Save quantized model\n",
+    "model.save_quantized(quant_path)\n",
+    "\n",
+    "del model"
    ]
   },
   {
@@ -152,20 +165,11 @@
     }
    ],
    "source": [
-    "\n",
     "disable_torch_init()\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_path)\n",
-    "config = LlavaConfig.from_pretrained(model_path)\n",
-    "with init_empty_weights():\n",
-    "    model = LlavaLlamaForCausalLM.from_pretrained(model_path, config=config,\n",
-    "                                                    torch_dtype=torch.float16, device_map=\"auto\")\n",
-    "q_config = {\"zero_point\": True, \"q_group_size\": 128}\n",
-    "real_quantize_model_weight(\n",
-    "    model, w_bit=4, q_config=q_config, init_only=True)\n",
     "\n",
-    "model = load_checkpoint_and_dispatch(\n",
-    "    model, quant_path, device_map=\"auto\"\n",
-    ")"
+    "# Load model\n",
+    "model = AutoAWQForCausalLM.from_quantized(quant_path, quant_filename=\"awq_model_w4_g128.pt\")\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_path, trust_remote_code=True)"
    ]
   },
   {
@@ -198,17 +202,17 @@
     "        image = Image.open(image_file).convert('RGB')\n",
     "    return image\n",
     "\n",
-    "image_processor = CLIPImageProcessor.from_pretrained(model.config.mm_vision_tower, torch_dtype=torch.float16)\n",
+    "image_processor = CLIPImageProcessor.from_pretrained(model.model.config.mm_vision_tower, torch_dtype=torch.float16)\n",
     "\n",
     "mm_use_im_start_end = getattr(model.config, \"mm_use_im_start_end\", False)\n",
     "tokenizer.add_tokens([DEFAULT_IMAGE_PATCH_TOKEN], special_tokens=True)\n",
     "if mm_use_im_start_end:\n",
     "    tokenizer.add_tokens([DEFAULT_IM_START_TOKEN, DEFAULT_IM_END_TOKEN], special_tokens=True)\n",
     "\n",
-    "vision_tower = model.get_model().vision_tower[0]\n",
+    "vision_tower = model.model.get_model().vision_tower[0]\n",
     "if vision_tower.device.type == 'meta':\n",
     "    vision_tower = CLIPVisionModel.from_pretrained(vision_tower.config._name_or_path, torch_dtype=torch.float16, low_cpu_mem_usage=True).cuda()\n",
-    "    model.get_model().vision_tower[0] = vision_tower\n",
+    "    model.model.get_model().vision_tower[0] = vision_tower\n",
     "else:\n",
     "    vision_tower.to(device='cuda', dtype=torch.float16)\n",
     "vision_config = vision_tower.config\n",
